<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_viz</name>
  <version>1.0.0</version>
  <description>The apriltag_viz package</description>

  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>
  <license>GPLv2</license>
  <url type="website">hippocampusrobotics.github.io/docs</url>
  <author email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>hippo_common</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>apriltag_msgs</depend>

  <depend>libv4l-dev</depend>
  <depend>v4l-utils</depend>
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

